# loadBalancer

./: .gitignore  CMakeLists.txt  README.md  config.lua
config/: config.lua
docker/: Dockerfile  docker-compose.yml
include/: lua.h  types.h  version.h
lua/: CMakeLists.txt
scripts/: create_mkdir.sh  install.sh  server.py
src/: loadbalancer.c  loadbalancer.h  main.c
src/algorithm/: round_robin.c  round_robin.h
src/config/: config_parser.c  config_parser.h  config_validator.c  config_validator.h  lua_config.c  lua_config.h
src/core/: loadbalancer.c  loadbalancer.h
src/health_check/: health_check.c  health_check.h
src/networking/: server.c  server.h
src/utils/: args.c  args.h  display.c  display.h  logger.c  logger.h  signal_handler.c  signal_handler.h  usage.c  usage.h
tests/lua/: lua.c
